Fix vault capacity toggle, reload command, and double‑chest pairing rules, removed target from repo.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -25,3 +25,6 @@ commands:
   cvaultstatus:
     usage: /cvaultstatus
     description: Show CommunityVault health info (admin).
+  cvaultreload:
+    usage: /cvaultreload
+    description: Reload CommunityVault configuration (admin).
