--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                         <configuration>
                             <target>
                                 <copy file="${project.build.directory}/${project.build.finalName}.jar"
-                                      todir="D:/Users/Gebruiker/OneDrive/Documenten/TestServer/plugins" />
+                                      todir="E:\TestServer\plugins" />
                             </target>
                         </configuration>
                     </execution>
