CommunityVault 1.3: category editor UI, granular perms, safer menus, update checks, and vault/limits fixes
  - Add Category Manager UI (create/rename/icon/edit/add/remove/delete) with searchable icon/item pickers.
  - Introduce granular category permissions with defaults; update plugin.yml permissions list.
  - Add Uncategorized Items view + assign flow and remove/add buttons on category pages.
  - Prevent chest title spoofing by using inventory holders; clean up menu titles.
  - Add Modrinth update check on startup with console notice.
  - Enforce optional vault capacity toggle; improve hopper handling + deposit messages.
  - Support double chests for deposit/withdraw; restrict mixing special/normal chests.
  - Add /cvaultreload command, expand status output, and update README.
  - Add tests for capacity + category CRUD/membership.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: CommunityVault
 main: org.niels.communityVault.CommunityVault
-version: "1.2"
+version: "1.3"
 author: Niels
 api-version: '1.21'
 commands:
@@ -28,3 +28,37 @@ commands:
   cvaultreload:
     usage: /cvaultreload
     description: Reload CommunityVault configuration (admin).
+permissions:
+  communityvault.categories:
+    description: Full access to manage categories.
+    default: op
+  communityvault.categories.view:
+    description: View the Category Manager.
+    default: true
+  communityvault.categories.create:
+    description: Create new categories.
+    default: op
+  communityvault.categories.rename:
+    description: Rename categories.
+    default: true
+  communityvault.categories.icon:
+    description: Change category icons.
+    default: true
+  communityvault.categories.additem:
+    description: Add items to categories.
+    default: true
+  communityvault.categories.removeitem:
+    description: Remove items from categories.
+    default: true
+  communityvault.categories.delete:
+    description: Delete categories.
+    default: op
+  communityvault.compact:
+    description: Compact and save the vault.
+    default: op
+  communityvault.status:
+    description: View vault status.
+    default: op
+  communityvault.reload:
+    description: Reload configuration.
+    default: op
